--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "untitled1",
+  "name": "colorwheeljavascript",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
